src/objects/Completed_Assessment_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Assessment_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Question</label>
        <referenceTo>Assessment_Question__c</referenceTo>
        <relationshipLabel>Completed Assessment Answers</relationshipLabel>
        <relationshipName>Completed_Assessment_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Choice__c</fullName>
        <label>Choice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Assessment__c</fullName>
        <label>Completed Assessment</label>
        <referenceTo>Completed_Assessment__c</referenceTo>
        <relationshipLabel>Completed Assessment Answers</relationshipLabel>
        <relationshipName>Completed_Assessment_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Response_Note__c</fullName>
        <label>Response Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Question_Number__c</fullName>
        <label>Sub Question Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Question__c</fullName>
        <label>Sub Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UpdatedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Response_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidFromDateTime__c</fullName>
        <label>ValidFromDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ValidToDateTime__c</fullName>
        <label>ValidToDateTime</label>
        <type>DateTime</type>
    </fields>
    <label>Completed Assessment Answer</label>
    <nameField>
        <displayFormat>CAA-{0000000000}</displayFormat>
        <label>Completed Assessment Answer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Completed Assessment Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>